--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="WeatherApp.css">
+    <link rel="stylesheet" href="weatherApp.css">
     <title>Document</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
         </div>
       </div>
       </div>
-      <script src="WeatherApp.js"></script>
+      <script src="weatherApp.js"></script>
 </body>
 </html>
 
