This is my Project on weatherApp some changes with svg image and weather image

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="card-body">
           <h4 class="card-title" id="temprature">-----&#176c</h4>
           <p class="card-text" id="description">------</p>
+          <p class="card-text" id="minMax">-----</p>
           <p id="place">-----</p>
           <div id="climate">
           <div id="feel" class="s1">-----</div><div id="humidity" class="s2">-----</div>
