This is my Project on weatherApp some changes with svg image and weather image some Index file change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container mt-3">
       <div  id="mainDiv">  
       <div class="card" style="width:450px;height:480px;">
-        <img class="card-img-top" src="D:/New folder/html/svg image/haze.png" alt="Card image" style="width:100%;height:50%; padding-top:10px; " id="image">
+        <img class="card-img-top" src="svg image/haze.png" alt="Card image" style="width:100%;height:50%; padding-top:10px; " id="image">
         <div class="card-body">
           <h4 class="card-title" id="temprature">-----&#176c</h4>
           <p class="card-text" id="description">------</p>
